--- a/zeki-in/src/styles.css
+++ b/zeki-in/src/styles.css
@@ -4,6 +4,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: #fff;
 }
 
 body {
@@ -53,11 +54,11 @@ body {
 }
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
-* {
+b {
   box-sizing: border-box;
 }
-*::before,
-*::after {
+b::before,
+b::after {
   box-sizing: border-box;
 }
 body {
@@ -73,7 +74,7 @@ body {
   background: var(--backgroundColor);
   -webkit-text-stroke: 2px black;
 }
-* {
+b {
   margin: 0;
   padding: 0;
 }
@@ -94,14 +95,61 @@ div {
   -ms-flex-pack: center;
   justify-content: center;
   height: 100%;
-  background: #eee;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
 body {
-  background: #eeff00;
+  background: #fff;
 }
-a {
+b {
+  /*placement for code pen*/
+  margin: 10% 40%;
+  /*Button Text Style*/
+  font-family: "Inconsolata", "Helvetica", "Arial", sans-serif;
+  font-size: inherit;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+  /*Button Color & Border*/
+  border: 3px solid #000000;
+  color: #000000;
+  background: #fff;
+  outline: none;
+  /*Position, Display, Size*/
+  position: relative;
+  display: inline-block;
+  padding: 15px 10px 14px;
+  cursor: pointer;
+  width: auto;
+  bottom: 6%;
+}
+b:after {
+  /*Make a:after be as big as button*/
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /*Give a:after Border & Background color*/
+  border: 2px solid #000000;
+  background-color: #000000;
+  /*Decide Location of a:after..this gives a           bottom right shadow*/
+  bottom: 9%;
+  /*Place a:after behind button*/
+  z-index: -1;
+  content: "";
+  /*Animation/Transition Speed*/
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+b:hover {
+  bottom: 8%;
+}
+b:hover:after {
+  bottom: 10%;
+}
+
+.b1 {
   /*placement for code pen*/
   margin: 10% 40%;
   /*Button Text Style*/
@@ -124,7 +172,7 @@ a {
   width: auto;
   bottom: 6%;
 }
-a:after {
+.b1:after {
   /*Make a:after be as big as button*/
   position: absolute;
   width: 100%;
@@ -142,9 +190,105 @@ a:after {
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
 }
-a:hover {
+.b1:hover {
   bottom: 8%;
 }
-a:hover:after {
+.b1:hover:after {
   bottom: 10%;
+}
+
+.b2 {
+  /*placement for code pen*/
+  margin: 10% 40%;
+  /*Button Text Style*/
+  font-family: "Inconsolata", "Helvetica", "Arial", sans-serif;
+  font-size: inherit;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+  /*Button Color & Border*/
+  border: 3px solid #000000;
+  color: #000000;
+  background: #fff;
+  outline: none;
+  /*Position, Display, Size*/
+  position: absolute;
+  display: inline-block;
+  padding: 15px 10px 14px;
+  cursor: pointer;
+  width: auto;
+  bottom: 18%;
+}
+.b2:after {
+  /*Make a:after be as big as button*/
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /*Give a:after Border & Background color*/
+  border: 2px solid #000000;
+  background-color: #000000;
+  /*Decide Location of a:after..this gives a           bottom right shadow*/
+  bottom: 20%;
+  /*Place a:after behind button*/
+  z-index: -1;
+  content: "";
+  /*Animation/Transition Speed*/
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+.b2:hover {
+  bottom: 20%;
+}
+.b2:hover:after {
+  bottom: 18%;
+}
+
+.b3 {
+  /*placement for code pen*/
+  margin: 10% 40%;
+  /*Button Text Style*/
+  font-family: "Inconsolata", "Helvetica", "Arial", sans-serif;
+  font-size: inherit;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+  /*Button Color & Border*/
+  border: 3px solid #000000;
+  color: #000000;
+  background: #fff;
+  outline: none;
+  /*Position, Display, Size*/
+  position: absolute;
+  display: inline-block;
+  padding: 15px 10px 14px;
+  cursor: pointer;
+  width: auto;
+  bottom: 28%;
+}
+.b3:after {
+  /*Make a:after be as big as button*/
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /*Give a:after Border & Background color*/
+  border: 2px solid #000000;
+  background-color: #000000;
+  /*Decide Location of a:after..this gives a           bottom right shadow*/
+  bottom: 30%;
+  /*Place a:after behind button*/
+  z-index: -1;
+  content: "";
+  /*Animation/Transition Speed*/
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+.b3:hover {
+  bottom: 30%;
+}
+.b3:hover:after {
+  bottom: 28%;
 }
