--- a/zeki-in/src/variables.css
+++ b/zeki-in/src/variables.css
@@ -17,12 +17,11 @@ html {
   overflow: visible;
   padding: 10%;
   margin: 2%;
-  background-color: aliceblue;
 }
 
 .flexbox-item {
   min-width: 200px;
-  border: 3px solid #333;
+  border: 3px solid rgb(0, 0, 0);
   background-color: white;
   background-size: cover;
   text-align: center;
@@ -35,24 +34,16 @@ html {
   top: 5%;
   left: 5%;
   padding: 10px;
-  border: 3px solid #333;
+  border: 3px solid rgb(0, 0, 0);
   background-color: white;
 }
 
 .flexbox-item-1 {
   min-height: fit-content;
-  border: 3px solid #333;
+  border: 3px solid rgb(0, 0, 0);
   background-color: white;
   background-size: cover;
   text-align: center;
   margin: auto;
   padding: 30px;
-}
-
-.rectangle {
-  height: 150px;
-  width: 600px;
-  background-color: rgb(0, 0, 0);
-  padding: 4%;
-  margin: 10px 10px 10px 10px;
 }
